# rocket-modules

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: lib.rs  main.rs
tests/: routes.rs
