[package]
name = "route-modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["full", "parsing", "fold"]}
proc-macro2 = "1.0.40"
quote = "1.0.20"
rocket = "0.5.0-rc.2"
