[package]
name = "rocket_modules"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small crate that adds macros to conveniently organize Rocket route handlers in modules."
repository = "https://github.com/antoniusnaumann/rocket-modules"
authors = ["Antonius Naumann <git@antonius.dev>"]
keywords = ["rocket", "server", "web", "utility", "macro"]
categories = ["web-programming", "web-programming::http-server", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "1.0.98", features = ["full", "parsing"]}
quote = "1.0.20"
rocket = "0.5.0-rc.2"
